WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117517
REGRESSION: (
r149232
) videos on disney.com are initially scrambled on load
https://bugs.webkit.org/show_bug.cgi?id=117517
Summary
REGRESSION: (r149232) videos on disney.com are initially scrambled on load
Jer Noble
Reported
2013-06-11 12:55:23 PDT
Set a background color on the AVPlayerLayer to avoid corruption when no farames are available to display.
Attachments
Patch
(1.80 KB, patch)
2013-06-11 12:57 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-06-11 12:57:53 PDT
Created
attachment 204352
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-11 14:43:52 PDT
Comment on
attachment 204352
[details]
Patch Clearing flags on attachment: 204352 Committed
r151473
: <
http://trac.webkit.org/changeset/151473
>
WebKit Commit Bot
Comment 3
2013-06-11 14:43:54 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 4
2013-06-11 14:45:16 PDT
<
rdar://problem/14007879
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug