REGRESSION: (r149232) videos on disney.com are initially scrambled on load https://bugs.webkit.org/show_bug.cgi?id=117517

Reviewed by Eric Carlson.

Set a background color on the AVPlayerLayer to avoid corruption when no
frames are available to display.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createVideoLayer):


Canonical link: https://commits.webkit.org/135684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151473 268f45cc-cd09-0410-ab3c-d52691b4dbfc